--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@types/formidable": "^3.4.5",
+    "axios": "^1.7.2",
+    "formidable": "^3.5.1",
     "next": "14.2.4",
+    "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
