--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/formidable": "^3.4.5",
     "axios": "^1.7.2",
+    "daisyui": "^4.12.10",
     "formidable": "^3.5.1",
     "next": "14.2.4",
     "openai": "^4.52.3",
