--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@types/formidable": "^3.4.5",
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
     "formidable": "^3.5.1",
+    "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
