--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@types/formidable": "^3.4.5",
+    "@vercel/blob": "^0.23.4",
     "axios": "^1.7.2",
     "daisyui": "^4.12.10",
     "formidable": "^3.5.1",
