--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "functions": {
-    "api/*.js": {
-      "maxDuration": 20
-    },
-    "src/api/*.js": {
+    "app/api/*.js": {
       "maxDuration": 20
     }
   }
