--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-image-file-resizer": "^0.4.8",
     "react-markdown": "^9.0.1"
   },
   "devDependencies": {
